--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     </head>
 
   <body>
-<img src="https://avatars.githubusercontent.com/u/90090313?v=4">
+<ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
 
   </body>
 
